Complete structure for reading list cadre from DB

--- a/src/main/webapp/cadre/create.xhtml
+++ b/src/main/webapp/cadre/create.xhtml
@@ -54,7 +54,7 @@
                                          id="description"/>
                             <p:outputLabel/>
                         </p:panelGrid>
-                        <p:commandButton action="#{cadreController.create}" value="Ajouter"/>
+                        <p:commandButton action="#{cadreController.update}" value="Ajouter"/>
 </h:form>  
                 </p:layoutUnit>
 
