--- a/src/main/webapp/cadre/detail.xhtml
+++ b/src/main/webapp/cadre/detail.xhtml
@@ -14,7 +14,7 @@ and open the template in the editor.
 </h:head>
     <h:body>
         <div>Detail du Cadre</div>
-        <p:messages for="update"/>
+        <p:messages for="error"/>
         <h:form>
              <h1><h:outputText value="Create/Edit"/></h1>
                     <p:panelGrid columns="2">
