finalization of diplome, fonction, cadre operation (CRU)
//TO DO //
so easy, the delete operation ;)

--- a/src/main/webapp/fonction/create.xhtml
+++ b/src/main/webapp/fonction/create.xhtml
@@ -28,7 +28,7 @@
                 <p:message for="echelle"/>
                 
                 <p:outputLabel value="Cadre"/>
-                <p:selectOneMenu value="#{fonctionController.current.cadre}">
+                <p:selectOneMenu value="#{fonctionController.nouveau.cadre}">
                     <f:selectItems value="#{cadreController.all}"/>
                 </p:selectOneMenu>
                 <p:outputLabel value=""/>
