--- a/src/main/webapp/cadre/list.xhtml
+++ b/src/main/webapp/cadre/list.xhtml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+To change this template, choose Tools | Templates
+and open the template in the editor.
+-->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -8,9 +13,12 @@
         <h1>Liste des cadres</h1>
 </h:head>
     <h:body>
+    <ui:composition template="../grhFSO.xhtml">
+        <ui:define name="content">	
         <div>Liste des Cadres</div>
         <p:messages for="update"/>
         <h:form>
+            <p:commandLink value="Ajouter un nouveau cadre" action="#{cadreController.showCreate}"/>
             <p:dataTable value="#{cadreController.all}" var="item"
                          paginator="true" rows="5" sortMode="multiple" selectionMode="single"
                          selection="#{cadreController.current}" rowKey="#{item.idCadre}">
@@ -35,6 +43,7 @@
                 
             </p:dataTable>
         </h:form>
-        
+        </ui:define>
+    </ui:composition>
     </h:body>
 </html>
