--- a/src/main/webapp/fonction/list.xhtml
+++ b/src/main/webapp/fonction/list.xhtml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+To change this template, choose Tools | Templates
+and open the template in the editor.
+-->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -5,9 +10,11 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <h1>Liste des fonctions</h1>
+        <h1>Liste des cadres</h1>
 </h:head>
     <h:body>
+    <ui:composition template="../grhFSO.xhtml">
+        <ui:define name="content">	
         <div>Liste des Fonctions</div>
         <p:commandLink value="Nouvelle Fonction" action="#{fonctionController.showCreate}"/>
         <p:messages for="update"/>
@@ -48,6 +55,7 @@
                 
             </p:dataTable>
         </h:form>
-        
+        </ui:define>
+    </ui:composition>
     </h:body>
 </html>
