--- a/src/main/webapp/personne/list.xhtml
+++ b/src/main/webapp/personne/list.xhtml
@@ -18,6 +18,7 @@ and open the template in the editor.
         <div>Liste des diplomes</div>
         <p:messages for="update"/>
         <h:form>
+            <p:commandLink value="Ajouter une Nouvelle personne" action="#{personneController.showCreate}"/>
             <p:dataTable value="#{personneController.all}" var="item"
                          paginator="true" rows="5" sortMode="multiple" selectionMode="single"
                          selection="#{personneController.current}" rowKey="#{item.idPersonne}">
